# winning-ticket-search

./: .gitignore  .mergify.yml  LICENSE  README.md  build.sh  pyproject.toml
.github/workflows/: codeql-analysis.yml  run_test.yml  run_tests_on_multiple_os.yml
lottery/: WinningQatTicket.py  WinningTicket.py  example.py  qat_example.py
lottery/checkpointing/: checkpointformat.py  formats.py  quantised.py  resolver.py  script.py
lottery/metrics/: DataLogger.py  EpochMetrics.py  ResultTypes.py
lottery/models/: data_path.py
lottery/models/alexnet/: cifar10.py
lottery/models/dense/: dense.py  mnist.py  qat.py
lottery/pruning/: LayerPercentile.py  Strategy.py
lottery/tests/: test_search.py
lottery/tests/Results/: _0.pt  _5.pt
lottery/training/: ClassificationTrainer.py  ModelTrainer.py  OptimiserType.py
lottery/utils/testing/: dataset.py
lottery/wt/: winingticket.py
tests/: test_lottery.py
