[tool.poetry]
name = "lottery"
version = "1.0.0"
description = "An Implementation of LTH search"
authors = ["Matthew Jones <matthewjones372@gmail.com>"]
license = "MIT"
readme = "README.md"

keywords = ["pruning", "lth", "lottery"]
[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
tqdm = "^4.62.1"
torch = "^1.9.0"
torchmetrics = "^0.5.0"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
