[tool.poetry]
name = "lottery"
version = "1.0.0"
description = "An Implementation of LTH search"
authors = ["Matthew Jones <matthewjones372@gmail.com>"]
license = "MIT"
readme = "README.md"

keywords = ["pruning", "lth", "lottery"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
tqdm = "^4.62.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.10.2"
black = "^21.7b0"
coverage = {extras = ["toml"], version = "^5.5"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]