[tool.poetry]
name = "lottery"
version = "1.0.0"
description = "An Implementation of LTH search"
authors = ["Matthew Jones <matthewjones372@gmail.com>"]
license = "MIT"
readme = "README.md"

keywords = ["pruning", "lth", "lottery"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
tqdm = "^4.62.3"
torchvision = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.1"
black = "^21.11b1"
coverage = {extras = ["toml"], version = "^6.2"}
poethepoet = "^0.13.0"


[tool.poe.tasks]
force-cuda11 = "python3 -m pip install torch==1.9.0+cu111 torchvision==0.10.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html torchmetrics"
force-cuda10 = "python3 -m pip install torch==1.9.0+cu102 torchvision==0.10.0+cu102 -f https://download.pytorch.org/whl/torch_stable.html torchmetrics"
force-cpu = "python3 -m pip install torch torchvision torchmetrics"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]